# glyphnet

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  SECURITY.md  deny.toml
.github/workflows/: android-jni.yml  ci.yml  coverage.yml  fuzz.yml  release.yml  security.yml
.serena/: project.yml
apps/expo-glyphnet/: .easignore  README.md  app.json  eas.json  metro.config.js  package.json  skills-lock.json
apps/expo-glyphnet/modules/glyphnet-scanner/: expo-module.config.json
apps/expo-glyphnet/modules/glyphnet-scanner/android/: build.gradle
apps/expo-glyphnet/modules/glyphnet-scanner/android/src/main/java/expo/modules/glyphnetscanner/: GlyphNetNativeBridge.kt  GlyphNetScannerModule.kt
apps/expo-glyphnet/modules/glyphnet-scanner/ios/: GlyphNetScanner.podspec  GlyphNetScannerModule.swift
apps/expo-glyphnet/modules/glyphnet-scanner/src/: GlyphNetScannerModule.ts  GlyphNetScannerModule.web.ts
apps/expo-glyphnet/scripts/: build-glyphnet-jni-android.ps1  build-glyphnet-jni-android.sh  eas-fetch-jni-libs.sh
apps/expo-glyphnet/src/: global.css
apps/expo-glyphnet/src/adapters/scanner/: index.ts  mockScannerAdapter.ts  nativeScannerAdapter.ts  types.ts
apps/expo-glyphnet/src/app/: explore.tsx  index.tsx
apps/expo-glyphnet/src/components/: app-tabs.tsx
apps/expo-glyphnet/src/features/encode/: EncodePanel.tsx
apps/expo-glyphnet/src/features/scan/: ScanPanel.tsx
apps/expo-glyphnet/src/tw/: animated.tsx  image.tsx  index.tsx
crates/glyphnet-cli/: Cargo.toml
crates/glyphnet-cli/src/: auth.rs  main.rs
crates/glyphnet-core/: Cargo.toml
crates/glyphnet-core/src/: auth.rs  bitstream.rs  burst_packet.rs  descriptor.rs  error.rs  frame.rs  geometry.rs  layout.rs  lib.rs  matrix.rs  mode.rs  profile.rs
crates/glyphnet-cv/: Cargo.toml
crates/glyphnet-cv/src/: lib.rs
crates/glyphnet-decode/: Cargo.toml
crates/glyphnet-decode/src/: autodetect.rs  lib.rs  recovery.rs
crates/glyphnet-ecc/: Cargo.toml
crates/glyphnet-ecc/benches/: ecc.rs
crates/glyphnet-ecc/src/: lib.rs
crates/glyphnet-encode/: Cargo.toml
crates/glyphnet-encode/benches/: encode.rs
crates/glyphnet-encode/src/: lib.rs
crates/glyphnet-jni/: Cargo.toml
crates/glyphnet-jni/src/: lib.rs
crates/glyphnet-render/: Cargo.toml
crates/glyphnet-render/src/: lib.rs
crates/glyphnet-scanner/: Cargo.toml
crates/glyphnet-scanner/benches/: scanner.rs
crates/glyphnet-scanner/src/: candidates.rs  decode_paths.rs  detectors.rs  lib.rs  rectification.rs  types.rs
crates/glyphnet-testkit/: Cargo.toml
crates/glyphnet-testkit/fixtures/corpus/: manifest.v1.json
crates/glyphnet-testkit/src/: lib.rs
crates/glyphnet-wasm/: Cargo.toml
crates/glyphnet-wasm/src/: auth.rs  lib.rs
demos/browser/: index.html
demos/debug/: README.md  index.html  main.js  styles.css
demos/desktop/: README.md
docs/: architecture.md  benchmarks.md  plan-status.md  profiles.md  release.md  roadmap.md  strategy.md  testing.md
docs/adr/: 0001-layered-workspace.md
docs/protocol/: glyphnet-v0.md
docs/sdk/: browser.md  mobile.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bits_to_frame.rs  frame_decode.rs
scripts/: check_burst_reliability.sh  check_scanner_perf.sh
sdk/browser/: package-lock.json  package.json  tsconfig.json
sdk/browser/src/: index.ts
sdk/mobile/: README.md
