[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["GlyphNet contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/glyphnet/glyphnet"
homepage = "https://github.com/glyphnet/glyphnet"
documentation = "https://glyphnet.dev/spec"
readme = "README.md"
keywords = ["qr", "barcode", "computer-vision", "wasm", "optical"]
categories = ["encoding", "computer-vision", "wasm", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "rayon"] }
proptest = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
wasm-bindgen = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
