[package]
name = "glyphnet-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
glyphnet-core = { path = "../crates/glyphnet-core" }
glyphnet-decode = { path = "../crates/glyphnet-decode" }
libfuzzer-sys = "0.4"

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bits_to_frame"
path = "fuzz_targets/bits_to_frame.rs"
test = false
doc = false
bench = false
