[package]
name = "glyphnet-core"
description = "Core protocol types, binary wire format, layout primitives, and invariants for GlyphNet optical codes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
blake3.workspace = true
crc32fast.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
