[package]
name = "glyphnet-jni"
description = "JNI bridge for GlyphNet mobile native modules."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
glyphnet-core = { path = "../glyphnet-core", version = "0.1.0" }
glyphnet-encode = { path = "../glyphnet-encode", version = "0.1.0" }
glyphnet-render = { path = "../glyphnet-render", version = "0.1.0" }
glyphnet-scanner = { path = "../glyphnet-scanner", version = "0.1.0" }
image.workspace = true
jni = "0.21"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
